Styled the about section and implemented the view for tablet, mobile and desktop view.

--- a/landing-page/src/app/components/about/about.component.html
+++ b/landing-page/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="container">
   <div class="info-container">
     <h1 class="title">Platforma Artelor Stradale</h1>
     <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex excepturi aliquid odio consequuntur, perferendis recusandae aperiam ullam tempora corporis minus cumque sapiente vero, deserunt iusto dolore eum praesentium ut quia.</p>
