--- a/landing-page/src/app/components/about/about.component.html
+++ b/landing-page/src/app/components/about/about.component.html
@@ -3,8 +3,8 @@
     <h1 class="title">Platforma Artelor Stradale</h1>
     <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex excepturi aliquid odio consequuntur, perferendis recusandae aperiam ullam tempora corporis minus cumque sapiente vero, deserunt iusto dolore eum praesentium ut quia.</p>
     <div class="buttons-container">
-      <button class="btn">Exploreaza</button>
-      <button class="btn">Anoneaza-te</button>
+      <button class="primary">Exploreaza</button>
+      <button class="secondary">Aboneaza-te</button>
     </div>
   </div>
   <div class="image-container">
