--- a/landing-page/src/styles.scss
+++ b/landing-page/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 $primary-color: #2A5B96;
 $secondary-color: #3B8292;
-$thernary-color: #F5C09E;
+$ternary-color: #F5C09E;
 $border-color: #101324;
 $hover-primary: #000000;
 $hover-secondary: #ffffff;
@@ -16,6 +16,10 @@ $text-color: #101324;
   --secondary-color: #{$secondary-color};
   --border-color: #{$border-color};
 }
+* {
+  background-color: $background-color;
+
+}
 
 button {
   margin: 10px 0px;
@@ -23,18 +27,24 @@ button {
   cursor: pointer;
   font-size: 12px;
   padding: 10px 20px;
-  border: 2px solid $border-color;
 }
 
 button.primary {
   background-color: $text-color;
   color: $background-color;
+  border: 2px solid $border-color;
 }
 
 button.secondary {
   background-color: $background-color;
   color: $text-color;
   margin-left: 10px;
+  border: 2px solid $border-color;
+}
+
+button.ternary {
+  background-color: $background-color;
+  color: $text-color;
 }
 
 button.primary:hover {
@@ -44,3 +54,8 @@ button.primary:hover {
 button.secondary:hover {
   background-color: $hover-secondary;
 }
+
+button.ternary:hover {
+  text-decoration: underline;
+}
+
