--- a/landing-page/src/styles.scss
+++ b/landing-page/src/styles.scss
@@ -59,3 +59,16 @@ button.ternary:hover {
   text-decoration: underline;
 }
 
+img.icon {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  aspect-ratio: 1;
+}
+
+img.image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  aspect-ratio: 1;
+}
