--- a/landing-page/src/app/pages/home/home.component.html
+++ b/landing-page/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
 <app-about></app-about>
 <app-people-opinion></app-people-opinion>
-<app-features></app-features>
+<app-features id="features"></app-features>
 <app-map></app-map>
