Created an anchor to the map and added buttons to cards.

--- a/landing-page/src/app/components/features/features.component.html
+++ b/landing-page/src/app/components/features/features.component.html
@@ -17,6 +17,9 @@
         <div class="description-container">
           <p class="description">Exploreaza artistii locali ce vor sustine spectacole</p>
         </div>
+        <div class="button-container">
+          <button class="ternary" onclick="window.open('https://brasov.artastradala.ro/artists')">Detalii ></button>
+        </div>
       </div>
       <div class="small-card-2">
         <div class="icon-container">
@@ -28,6 +31,9 @@
         <div class="description-container">
           <p class="description">Foloseste-te de harta pentru a vedea locurile special amenajate</p>
         </div>
+        <div class="button-container">
+          <button class="ternary" (click)="scrollTo('map')">Detalii ></button>
+        </div>
       </div>
     </div>
     <div class="big-card-container">
@@ -38,6 +44,9 @@
         <h6 class="sub-title">Evenimente</h6>
         <h1 class="title">Alatura-te comunitatii si hai la evenimente</h1>
         <p class="description">Participa la evenimentele artistilor create special pentru tine.</p>
+        <div class="button-container">
+          <button class="ternary" onclick="window.open('https://brasov.artastradala.ro/events')">Detalii ></button>
+        </div>
       </div>
     </div>
   </div>
