--- a/landing-page/src/app/pages/home/home.component.html
+++ b/landing-page/src/app/pages/home/home.component.html
@@ -2,3 +2,4 @@
 <app-people-opinion></app-people-opinion>
 <app-features id="features"></app-features>
 <app-map id="map"></app-map>
+<app-community></app-community>
