Implemented and styled subscribe section.

--- a/landing-page/src/app/components/subscribe/subscribe.component.html
+++ b/landing-page/src/app/components/subscribe/subscribe.component.html
@@ -1,1 +1,10 @@
-<p>subscribe works!</p>
+<section class="container">
+  <div class="info-container">
+    <h1 class="title">Aboneaza-te la newsletter</h1>
+    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, repellat</p>
+    <form>
+      <input type="text" placeholder="Email">
+      <input type="submit" value="Aboneaza-te">
+    </form>
+  </div>
+</section>
