--- a/landing-page/src/app/pages/home/home.component.html
+++ b/landing-page/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
-<app-about></app-about>
-<app-people-opinion></app-people-opinion>
+<app-navbar></app-navbar>
+<app-about id="about"></app-about>
+<app-people-opinion id="peoples-opinion"></app-people-opinion>
 <app-features id="features"></app-features>
 <app-map id="map"></app-map>
-<app-community></app-community>
+<app-community id="community"></app-community>
