--- a/landing-page/src/styles.scss
+++ b/landing-page/src/styles.scss
@@ -1,3 +1,5 @@
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
 /* You can add global styles to this file, and also import other style files */
 $primary-color: #2A5B96;
 $secondary-color: #3B8292;
@@ -18,6 +20,9 @@ $text-color: #101324;
 }
 * {
   background-color: $background-color;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 
 }
 
@@ -71,4 +76,20 @@ img.image {
   height: auto;
   object-fit: cover;
   aspect-ratio: 1;
+}
+
+img.logo {
+  width: 100px;
+  height: auto;
+  margin: 10px;
+  cursor: pointer;
+
+}
+
+li {
+  cursor: pointer;
+
+  &:hover {
+    color: $primary-color;
+  }
 }
