--- a/landing-page/src/app/pages/home/home.component.html
+++ b/landing-page/src/app/pages/home/home.component.html
@@ -4,3 +4,4 @@
 <app-features id="features"></app-features>
 <app-map id="map"></app-map>
 <app-community id="community"></app-community>
+<app-footer></app-footer>
