--- a/landing-page/src/styles.scss
+++ b/landing-page/src/styles.scss
@@ -99,7 +99,7 @@ input {
   background: none;
   width: 60%;
   outline: none;
-  border: 1px solid $text-color;
+  border: 2px solid;
   caret-color: $secondary-color;
   color: $secondary-color;
   padding-left: 10px;
@@ -117,6 +117,7 @@ input::placeholder {
   display: flex;
   justify-content: center;
   color: red;
+  background-color: transparent;
 
   @media (max-width: 425px) {
     font-size: 12px;
