--- a/landing-page/src/styles.scss
+++ b/landing-page/src/styles.scss
@@ -115,7 +115,7 @@ input::placeholder {
   font-size: 14px;
   font-weight: 800;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   color: red;
   background-color: transparent;
 
