Added some global styling for containers and titles, descriptions, sub-titles classes.

--- a/landing-page/src/app/components/subscribe/subscribe.component.scss
+++ b/landing-page/src/app/components/subscribe/subscribe.component.scss
@@ -37,6 +37,10 @@
       width: 50%;
       background-color: transparent;
 
+      @media (max-width: 425px) {
+        width: 100%;
+      }
+
       form {
         background-color: transparent;
       }
