--- a/landing-page/src/app/components/about/about.component.html
+++ b/landing-page/src/app/components/about/about.component.html
@@ -1,6 +1,7 @@
 <section class="container">
   <div class="info-container">
     <h1 class="title">Platforma Artelor Stradale</h1>
+    <p class="description">sal</p>
     <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex excepturi aliquid odio consequuntur, perferendis recusandae aperiam ullam tempora corporis minus cumque sapiente vero, deserunt iusto dolore eum praesentium ut quia.</p>
     <div class="buttons-container">
       <button class="primary" (click)="scrollTo('features')">Exploreaza</button>
