--- a/landing-page/src/app/components/navbar/navbar.component.html
+++ b/landing-page/src/app/components/navbar/navbar.component.html
@@ -11,13 +11,13 @@
       mat-icon-button
       (click)="toggleSidenav()"
       class="sidenav-button"
-      *ngIf="isMobileView"
+      *ngIf="isMobile()"
     >
       <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
 
   </section>
-  <section class="navbar-row2" *ngIf="!isMobileView">
+  <section class="navbar-row2" *ngIf="!isMobile()">
     <ul>
       <li (click)="scrollTo('peoples-opinion')">
         Parerea oamenilor
@@ -34,7 +34,7 @@
     </ul>
   </section>
 
-  <div class="backdrop" (click)="toggleSidenav()" *ngIf="isSidenavOpened && isMobileView"></div>
+  <div class="backdrop" (click)="toggleSidenav()" *ngIf="isSidenavOpened && isMobile()"></div>
   <section class="sidenav-container" *ngIf="isSidenavOpened">
     <ul>
       <li (click)="scrollTo('peoples-opinion')" (click)="toggleSidenav()">
